<resources>
    <string name="app_name">Shapeup</string>
    <string name="email_hint">email_hint</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="password_hint">passwordhint</string>
    <string name="shapeup">ShapeUp</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="mail">Email</string>
    <string name="username">Username</string>
    <string name="email_">Email</string>
    <string name="password_">Password</string>
    <string name="log_In">Login</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an Account? Create one</string>
    <string name="sign_up">SingUp</string>
    <string name="signup_">SignUp</string>
    <string name="our_location">Our Location</string>
    <string name="our_instructors">Our Instructors</string>
    <string name="past_workouts">Past WorkOuts</string>
    <string name="work_out_session">Work Out Sessions</string>
    <string name="targeted_weight">Targeted weight</string>
    <string name="name">name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="age">age</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="address">address</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">Location Permission Denied</string>
    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f
              \n Timestamp: %3$tr"</string>
    <string name="start_tracking_location">Start tracking Location</string>
    <string name="textview_hint">text view hint</string>
    <string name="a_ddress_text">address text</string>
    <string name="loading">loading</string>
    <string name="stop_tracking_location">Stop tracking location</string>
    <string name="forgot_password">forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="email">Email</string>
    <string name="resetpassword">Reset Password</string>
    <string name="my_profile">my profile</string>
    <string name="add_image">Add image</string>
    <string name="addimage">add image</string>
    <string name="add_my_own_workouts">Add my own Workouts</string>
    <string name="addworkouts">Add my own workouts</string>
    <string name="thigh_bums_and_tummy">Thigh,bums and Tummy</string>
    <string name="muscle_training_and_body_building">Muscle training and Body Building</string>
    <string name="triceps_and_biceps">Triceps and Biceps</string>
    <string name="cardio">Cardio</string>
    <string name="of">Of</string>
    <string name="a_set_is_the_number_of_cycles_of_reps_you_complete">A set is the number of cycles of reps you complete</string>
    <string name="a_rep_is_the_number_of_times_you_perform_a_specific_exercise">A rep is the number of times you perform a specific exercise</string>
    <string name="reps">Reps</string>
    <string name="add">Add</string>
    <string name="sets">Sets</string>
    <string name="enter_workout_name">Enter Workout Name</string>
    <string name="biking">Biking</string>
    <string name="running">Running</string>
    <string name="skipping_rope">Skipping rope</string>
    <string name="sports">Sports</string>
    <string name="swimming">Swimming</string>
    <string name="aerobics">Aerobics</string>
    <string name="rep">Reps</string>
    <string name="biking_is_a_total_body_workout_one_can_burn_upto_400_calories_per_hour">Biking is a total-body workout.One can burn upto 400 calories per hour.</string>
    <string name="sets_running">Sets</string>
    <string name="running_is_an_exercise_that_helps_build_strong_bones_as_it_is_a_weight_bearing_exercise">Running is an exercise that helps build strong bones,as it is a weight bearing exercise.</string>
    <string name="jumping_rope_is_a_cardio_exercise_that_helps_burn_a_significant_amount_of_calories_through_repeated_jumping_motion_and_keeping_the_body_moving">Jumping rope is a cardio exercise that helps burn a significant amount of calories through repeated jumping motion and keeping the body moving.</string>
    <string name="sets_rope">sets</string>
    <string name="reps_rope">reps</string>
    <string name="pushups">Pushups</string>
    <string name="bench_dips">Bench dips</string>
    <string name="using_dumbbells">Using dumbbells</string>
    <string name="ball_dips">Ball dips</string>
    <string name="a_good_way_to_work_on_your_triceps_and_biceps_place_yor_hands_onto_the_edge_of_your_bench_one_hand_on_each_side_of_your_hips_use_your_arms_to_push_your_butt_up_and_off_the_bench_firmly_grip_the_edge_of_the_bench_as_you_straighten_your_arms_and_extend_your_legs_foward_so_that_your_knees_are_no_longer_bent_your_butt_should_be_infront_of_the_bench">A good way to work on your triceps and biceps.Place yor hands onto the edge of your bench,one hand on each side of your hips.Use your arms to push your butt up and off the bench.Firmly grip the edge of the bench as you straighten your arms and extend your legs foward so that your knees are no longer bent.Your butt should be infront of the bench.</string>
    <string name="sets_bench">sets</string>
    <string name="reps_bench">reps</string>
    <string name="assume_a_face_down_prone_position_on_the_floor_keep_your_feet_together_your_weight_should_be_on_your_chest_position_hands_palms_down_on_the_floor_approximately_shoulder_width_apart_they_should_be_about_next_to_your_shoulders_with_your_elbows_pointed_towards_your_toes_raise_yourself_using_your_arms_at_this_point_your_weight_should_be_supported_by_your_hands_and_the_balls_of_your_feet_repeat">Assume a face-down prone position on the floor. Keep your feet together. Your weight should be on your chest.Position hands palms-down on the floor, approximately shoulder width apart. They should be about next to your shoulders, with your elbows pointed towards your toes.Raise yourself using your arms. At this point, your weight should be supported by your hands and the balls of your feet,repeat!</string>
    <string name="sets_push">sets</string>
    <string name="reps_push">reps</string>
    <string name="sets_dumb">sets</string>
    <string name="reps_dumb">reps</string>
    <string name="crunches">Crunches</string>
    <string name="planks">Planks</string>
    <string name="squats">Squats</string>
    <string name="lie_on_your_back_bend_your_knees_so_your_feet_are_flat_on_the_floor_place_your_fingertips_behind_your_neck_or_head_lift_your_shoulder_blades_off_of_the_mat_with_a_smooth_controlled_motion_inhale_then_exhale_as_you_engage_your_ab_muscles_and_raise_your_torso_lift_yourself_just_enough_to_raise_your_shoulder_blades_off_of_the_floor_once_your_shoulders_are_raised_pause_and_hold_that_position_for_1_to_2_seconds_lower_yourself_back_down_with_a_slow_steady_motion_inhaling_slowly">Lie on your back.Bend your knees so your feet are flat on the floor,place your fingertips behind your neck or head.Lift your shoulder blades off of the mat with a smooth, controlled motion. Inhale, then exhale as you engage your ab muscles and raise your torso. Lift yourself just enough to raise your shoulder blades off of the floor. Once your shoulders are raised, pause and hold that position for 1 to 2 seconds.Lower yourself back down with a slow, steady motion inhaling slowly.</string>
    <string name="sets_crunch">sets</string>
    <string name="reps_crunch">reps</string>
    <string name="lie_facedown_with_legs_extended_and_elbows_bent_and_directly_under_shoulders_clasp_your_hands_feet_should_be_hip_width_apart_and_elbows_should_be_shoulder_width_apart_contract_your_abs_then_tuck_your_toes_to_lift_your_body_forearms_remain_on_the_ground_you_should_be_in_a_straight_line_from_head_to_heels_hold_for_60_seconds_or_as_long_as_you_can">Lie facedown with legs extended and elbows bent and directly under shoulders; clasp your hands. Feet should be hip-width apart, and elbows should be shoulder-width apart. Contract your abs, then tuck your toes to lift your body (forearms remain on the ground); you should be in a straight line from head to heels. Hold for 60 seconds or as long as you can</string>
    <string name="sets_plank">sets</string>
    <string name="reps_plank">reps</string>
    <string name="sets_squat">sets</string>
    <string name="reps_squat">reps</string>
    <string name="start_in_a_standing_position_feet_shoulder_width_apart_and_hands_clasped_in_front_of_chest_elbows_slightly_bent_brace_your_abs_push_your_hips_back_and_bend_your_knees_lowering_the_body_into_a_squat_pause_at_the_bottom_then_push_back_up_to_the_starting_position">Start in a standing position, feet shoulder-width apart and hands clasped in front of chest, elbows slightly bent.Brace your abs, push your hips back and bend your knees, lowering the body into a squat. Pause at the bottom, then push back up to the starting position.</string>
    <string name="error_field_required">Field Required</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="full_name">Full name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="emailerror">Invalid email</string>
    <string name="passworderror">Invalid Password</string>
    <string name="nameerror">Invalid username</string>
    <string name="english">English</string>
    <string name="kiswahili">Kiswahili</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="chinese">Chinese</string>
    <string name="emailrequired">email required</string>
    <string name="invalidemai">invalid email</string>
</resources>