<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hpenvy15.shapeup.addworkout"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/workout_Name"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="33dp"
        android:layout_marginTop="97dp"
        android:ems="10"
        android:hint="@string/enter_workout_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/sets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="171dp"
        android:layout_height="57dp"
        android:layout_below="@+id/workout_Name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="106dp"
        android:layout_marginEnd="94dp"
        android:layout_marginStart="93dp"
        android:onClick="onClick"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/repsinfo"
        app:layout_constraintEnd_toEndOf="@+id/reps"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/repsinfo"
        app:layout_constraintTop_toBottomOf="@+id/sets" />

    <EditText
        android:id="@+id/reps"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginBottom="262dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="187dp"
        android:ems="10"
        android:hint="@string/reps"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/setsinfo"
        app:layout_constraintStart_toEndOf="@+id/sets"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/of"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginBottom="98dp"
        android:layout_marginEnd="177dp"
        android:layout_marginTop="101dp"
        android:text="@string/of"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sets"
        app:layout_constraintTop_toTopOf="@+id/workout_Name"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/repsinfo"
        android:layout_width="345dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:text="@string/a_rep_is_the_number_of_times_you_perform_a_specific_exercise"
        app:layout_constraintBottom_toTopOf="@+id/setsinfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <TextView
        android:id="@+id/setsinfo"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginBottom="1dp"
        android:text="@string/a_set_is_the_number_of_cycles_of_reps_you_complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/repsinfo"
        app:layout_constraintStart_toStartOf="@+id/repsinfo"
        app:layout_constraintTop_toBottomOf="@+id/reps" />

    <EditText
        android:id="@+id/sets"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/sets"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toStartOf="@+id/of"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workout_Name" />

</android.support.constraint.ConstraintLayout>
