<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gym"
    tools:context="com.example.hpenvy15.shapeup.resetpassword">


    <TextView
        android:id="@+id/textView"
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="85dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/lobster"
        android:foregroundGravity="center_horizontal"
        android:text="@string/shapeup"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@color/yellow"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/reset_password"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        android:id="@+id/textView4" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="257dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:background="@drawable/bottom_line"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />


    <Button
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onClick"
        android:background="@drawable/rounder_button"
        android:text="@string/resetpassword"
        android:textColor="@color/white" />


</RelativeLayout>
