<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hpenvy15.shapeup.profile"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="168dp"
        android:layout_marginBottom="46dp"
        app:layout_constraintBottom_toTopOf="@+id/fname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/qwert"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/user"
        android:layout_width="157dp"
        android:layout_height="118dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/profile_round"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <EditText
        android:id="@+id/fname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/female"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main" />

    <CheckBox
        android:id="@+id/female"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="41dp"
        android:layout_marginStart="26dp"
        android:text="@string/female"
        app:layout_constraintBottom_toTopOf="@+id/age"
        app:layout_constraintEnd_toStartOf="@+id/male"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fname" />

    <CheckBox
        android:id="@+id/male"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="62dp"
        android:text="@string/male"
        app:layout_constraintBottom_toBottomOf="@+id/female"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/female"
        app:layout_constraintTop_toTopOf="@+id/female" />

    <EditText
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/w_eight"
        app:layout_constraintEnd_toStartOf="@+id/h_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/female" />

    <EditText
        android:id="@+id/h_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/age"
        app:layout_constraintTop_toTopOf="@+id/age" />

    <EditText
        android:id="@+id/w_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="47dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toStartOf="@+id/targetw_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <EditText
        android:id="@+id/targetw_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="57dp"
        android:ems="10"
        android:hint="@string/targeted_weight"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/w_eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/w_eight"
        app:layout_constraintTop_toTopOf="@+id/w_eight" />

    <EditText
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/w_eight" />



</android.support.constraint.ConstraintLayout>


